@@ -1936,7 +1936,21 @@ lineseq_write (cob_file *f, const int opt)
 		if ((opt & COB_WRITE_PAGE)
 		 || (opt & COB_WRITE_BEFORE && f->flag_needs_nl)) {
 			COB_CHECKED_PUTC ('\r', (FILE *)f->file);
+		} else if ((opt == 0) ) {
+			putc ('\r', (FILE *)f->file);
 		}
+	}
+
+	if ((opt == 0) 
+	&& !(f->flag_select_features & COB_SELECT_LINAGE)
+#if 0 /* TODO: activate on merge of file_features from rw-branch */
+	&& ((f->file_features & COB_FILE_LS_LF)
+	 || (f->file_features & COB_FILE_LS_CRLF))
+#endif
+	){
+		/* At least add 1 LF */
+		putc ('\n', (FILE *)f->file);
+		f->flag_needs_nl = 0;
 	}
 
 	/* WRITE BEFORE */
@@ -7154,6 +7168,14 @@ copy_file_to_fcd (cob_file *f, FCD3 *fcd)
 	} else if(f->organization == COB_ORG_LINE_SEQUENTIAL) {
 		fcd->fileOrg = ORG_LINE_SEQ;
 		STCOMPX2(0, fcd->refKey);
+#if 0 /* TODO: activate on merge of file_features from rw-branch */
+		if((f->file_features & COB_FILE_LS_CRLF))
+			fcd->fstatusType |= MF_FST_CRdelim;
+		if((f->file_features & COB_FILE_LS_NULLS))
+			fcd->fstatusType |= MF_FST_InsertNulls;
+		if((f->file_features & COB_FILE_LS_FIXED))
+			fcd->fstatusType |= MF_FST_NoStripSpaces;
+#endif
 	} else if(f->organization == COB_ORG_RELATIVE) {
 		fcd->fileOrg = ORG_RELATIVE;
 		STCOMPX2(0, fcd->refKey);
@@ -7221,7 +7243,6 @@ copy_fcd_to_file (FCD3* fcd, cob_file *f)
 	else
 		f->flag_line_adv = 0;
 
-
 #if 0 /* FIXME */
 	if (fcd->recordMode == REC_MODE_FIXED) {
 		// ..
@@ -7243,6 +7264,20 @@ copy_fcd_to_file (FCD3* fcd, cob_file *f)
 		f->organization = COB_ORG_SEQUENTIAL;
 	} else if(fcd->fileOrg == ORG_LINE_SEQ) {
 		f->organization = COB_ORG_LINE_SEQUENTIAL;
+#if 0 /* TODO: activate on merge of file_features from rw-branch */
+#ifdef	_WIN32
+		f->file_features |= COB_FILE_LS_CRLF;
+#else
+		if((fcd->fstatusType & MF_FST_CRdelim))
+			f->file_features |= COB_FILE_LS_CRLF;
+		else
+			f->file_features |= COB_FILE_LS_LF;
+#endif
+		if((fcd->fstatusType & MF_FST_InsertNulls))
+			f->file_features |= COB_FILE_LS_NULLS;
+		if((fcd->fstatusType & MF_FST_NoStripSpaces))
+			f->file_features |= COB_FILE_LS_FIXED;
+#endif
 	} else if(fcd->fileOrg == ORG_RELATIVE) {
 		f->organization = COB_ORG_RELATIVE;
 	}
